--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -145,7 +145,7 @@
         </div>
       {%- endif -%}
 
-      <div class="page-width site-header__drawers">
+      <div class="site-header__drawers">
         <div class="site-header__drawers-container">
           <div class="site-header__drawer site-header__cart" id="HeaderCart">
             <div class="site-header__drawer-animate">
