--- a/snippets/product-grid-item.liquid
+++ b/snippets/product-grid-item.liquid
@@ -186,6 +186,7 @@
           {%- endfor -%}
         {%- endif -%}
       </div>
+    </a>
 
       <div class="grid-item__meta">
         <div class="grid-item__meta-main">
@@ -217,7 +218,6 @@
                     {%- unless values contains value -%}
                       {%- liquid
                         assign values = values | join: ',' | append: ',' | append: value | split: ','
-
                         assign color_file_name = value | handle | append: '.' | append: swatch_file_extension
                         assign color_image = color_file_name | file_img_url: '50x50' | prepend: 'https:' | split: '?' | first
                         assign color_swatch_fallback = value | split: ' ' | last | handle
@@ -238,7 +238,7 @@
                       {%- else -%}
                         {%- assign more_than_max = true -%}
                       {%- endif -%}
-                    {%- endunless -%}
+                    {%- endunless -%}                    
                   {%- endfor -%}
 
                   {%- if more_than_max -%}
@@ -251,15 +251,15 @@
           {%- endif -%}
 
           <div class="grid-product__title">{{ product.title }}</div>
-{% comment %}Start automatically added Judge.me widget{% endcomment %}
-  {% render 'judgeme_widgets', widget_type: 'judgeme_preview_badge', concierge_install: true, product: product %}
-{% comment %}End automatically added Judge.me widget{% endcomment %}
+          {% comment %}Start automatically added Judge.me widget{% endcomment %}
+            {% render 'judgeme_widgets', widget_type: 'judgeme_preview_badge', concierge_install: true, product: product %}
+          {% comment %}End automatically added Judge.me widget{% endcomment %}
 
           {%- if settings.vendor_enable -%}
             <div class="grid-product__vendor">{{ product.vendor }}</div>
           {%- endif -%}
         </div>
-        <div class="grid-item__meta-secondary">
+        <div class="grid-item__meta-secondary sss">
           <div class="grid-product__price">
             {%- if product.price_varies -%}
               <span class="grid-product__price--current">
@@ -312,13 +312,11 @@
             <span class="shopify-product-reviews-badge" data-id="{{ product.id }}"></span>
           {%- endif -%}
         </div>
-        
       </div>
-      
-      
-      
-      
-    </a>
+
+    {% comment %} product card sizes {% endcomment %}
+      {% render 'product-card-sizes' %}      
+    {% comment %} end product card sizes {% endcomment %}
 	
   </div>
   
