--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -11688,6 +11688,7 @@ h2, .h3.section-header__title, .type-banner p, strong, h1.section-header__title,
     background-size: 20px 36px,20px 36px,15px 36px,15px 36px;
     background-attachment: local,local,scroll,scroll;
     position:relative;
+    margin-top:auto;
 }
 .sizeunorfer {
     display: flex;
