--- a/snippets/product-grid-item.liquid
+++ b/snippets/product-grid-item.liquid
@@ -29,7 +29,7 @@
   <div class="grid-item__content">
      
     <div class="hideWishlistMegamenu">
-{% render 'hulkapps-wishlist-collection-btn', productId: product.id, variantId: product.selected_or_first_available_variant.id %}
+      {% render 'hulkapps-wishlist-collection-btn', productId: product.id, variantId: product.selected_or_first_available_variant.id %}
     </div>
     {%- unless no_actions -%}
       {%- if settings.quick_add_enable or settings.quick_shop_enable -%}
@@ -252,6 +252,24 @@
               {%- endif -%}
             {%- endfor -%}
           {%- endif -%}
+
+
+          {% comment %} Add size icon with popup on product cards {% endcomment %}
+          {% if product.options contains 'Size' %}
+            {%- capture size_chart_title -%}
+              <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-size-chart" viewBox="0 0 64 64"><defs><style>.a{fill:none;stroke:#000;stroke-width:2px}</style></defs><path class="a" d="M22.39 33.53c-7.46 0-13.5-3.9-13.5-8.72s6-8.72 13.5-8.72 13.5 3.9 13.5 8.72a12 12 0 0 1-.22 1.73"/><ellipse cx="22.39" cy="24.81" rx="3.28" ry="2.12"/><path class="a" d="M8.89 24.81V38.5c0 7.9 6.4 9.41 14.3 9.41h31.92V33.53H22.39M46.78 33.53v7.44M38.65 33.53v7.44M30.52 33.53v7.44M22.39 33.53v7.44"/></svg>
+            {%- endcapture -%}
+
+            <div class="size-chart__grid" {{ block.shopify_attributes }}>
+              {%- render
+                'tool-tip-trigger',
+                title: size_chart_title,
+                content: product.metafields.custom.size_chart.value.content,
+                context: 'size-chart'
+              -%}
+            </div>
+          {% endif %}
+
 
           <div class="grid-product__title">{{ product.title }}</div>
           {% comment %}Start automatically added Judge.me widget{% endcomment %}
